--- a/auth-confirm.html
+++ b/auth-confirm.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Porównywarka</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css?h=81582bdb254a94e4464424087c6479a8">
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
-    <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=a95e575957673e00c45f58586d838b51">
+    <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
-    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                                             <div class="input-group input-group-lg"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"></div>
                                         </div>
                                         <div class="col-sm-auto"><button class="btn btn-info btn-lg shadow-none w-100" type="button">Wyczyść</button></div>
-                                        <div class="col-sm-auto"><button class="btn btn-primary btn-lg w-100" type="button">Dalej</button></div>
+                                        <div class="col-sm-auto"><button class="btn btn-primary btn-lg shadow-none w-100" type="button">Dalej</button></div>
                                         <div class="col">
                                             <p class="d-flex justify-content-center mx-n1 mb-0"><span class="text-end mx-1">Nie otrzymałeś wiadomości?</span><a class="mx-1" href="#!">Prześlij kod jeszcze raz</a></p>
                                         </div>
