--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Porównywarka</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css?h=81582bdb254a94e4464424087c6479a8">
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
-    <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=a95e575957673e00c45f58586d838b51">
+    <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
-    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
 
 <body>
@@ -20,20 +21,20 @@
             <div>
                 <div>
                     <nav class="navbar navbar-light navbar-expand bg-white py-3">
-                        <div class="container"><a class="navbar-brand" href="index.html">POE</a>
+                        <div class="container"><a class="navbar-brand" href="index.html">Brand Name</a>
                             <div class="collapse navbar-collapse d-flex align-items-center" id="navcol-1">
                                 <div class="d-flex align-items-center w-100">
                                     <div class="row justify-content-between align-items-center flex-nowrap w-100">
                                         <div class="col">
                                             <ul class="navbar-nav text-uppercase flex-wrap">
                                                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
-                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
+                                                    <div class="dropdown-menu"><a class="dropdown-item" href="page.html">First Item</a><a class="dropdown-item" href="page.html">Second Item</a><a class="dropdown-item" href="page.html">Third Item</a></div>
                                                 </li>
                                                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla sprzedawców energii</a>
-                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
+                                                    <div class="dropdown-menu"><a class="dropdown-item" href="page.html">First Item</a><a class="dropdown-item" href="page.html">Second Item</a><a class="dropdown-item" href="page.html">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Regulamin</a></li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Kontakt</a></li>
+                                                <li class="nav-item"><a class="nav-link text-nowrap" href="page.html">Regulamin</a></li>
+                                                <li class="nav-item"><a class="nav-link text-nowrap" href="page.html">Kontakt</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-auto">
@@ -44,9 +45,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <div class="btn-group shadow-none align-items-center mx-n1" role="group"><button class="btn shadow-none p-0 mx-1" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-list fs-2">
-                                                                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
-                                                            </svg></button></div>
+                                                    <div class="btn-group shadow-none align-items-center mx-n1" role="group"><button class="btn shadow-none p-0 mx-1" type="button"><i class="la la-bars fs-3"></i></button></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -59,25 +58,27 @@
             </div>
         </header>
         <main>
-            <div class="text-white bg-primary py-5">
-                <div class="container">
-                    <div>
-                        <h1>Wybierz najlepszą ofertę</h1>
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="row gy-3 row-cols-1">
-                                    <div class="col-auto">
-                                        <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-1" name="osd"><label class="form-check-label" for="formCheck-1">Gospodarstwo domowe</label></div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-2" name="osd"><label class="form-check-label" for="formCheck-2">Przedsiębiorca</label></div>
-                                    </div>
-                                    <div class="col"><input class="form-control-lg form-control w-auto border-0 text-center rounded-0 py-2 bg-black bg-opacity-75 text-white" type="text" placeholder="Wpisz kod pocztowy"></div>
-                                    <div class="col">
-                                        <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><a class="btn btn-white rounded-0 m-2" role="button" href="search.html">Szukaj</a><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
-                                    </div>
-                                    <div class="col">
-                                        <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
+            <div class="bg--image"><img class="bg--image--background" src="assets/img/content/6282b404754ab.jpg?h=0bdb09adf68d63dce6c02fe8fb2eddeb">
+                <div class="text-white bg--image--content">
+                    <div class="container">
+                        <div class="py-5">
+                            <h1>Wybierz najlepszą ofertę</h1>
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="row gy-3 row-cols-1">
+                                        <div class="col-auto">
+                                            <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-1" name="osd"><label class="form-check-label" for="formCheck-1">Gospodarstwo domowe</label></div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-2" name="osd"><label class="form-check-label" for="formCheck-2">Przedsiębiorca</label></div>
+                                        </div>
+                                        <div class="col"><input class="form-control-lg form-control w-auto border-0 text-center rounded-0 py-2 bg-black bg-opacity-75 text-white" type="text" placeholder="Wpisz kod pocztowy"></div>
+                                        <div class="col">
+                                            <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><a class="btn btn-white rounded-0 m-2" role="button" href="search.html">Szukaj</a><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
+                                        </div>
+                                        <div class="col">
+                                            <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -270,35 +271,83 @@
             </div>
         </main>
         <footer>
-            <div class="border-top">
-                <div class="py-4">
-                    <div class="container">
-                        <div class="row justify-content-between align-items-center">
-                            <div class="col-auto">
-                                <ul class="list-inline mb-0 mx-n2">
-                                    <li class="list-inline-item mx-2"><a href="#!">Kontakt</a></li>
-                                    <li class="list-inline-item mx-2"><a href="#!">Regulamin</a></li>
-                                    <li class="list-inline-item mx-2"><a href="#!">Polityka prywatności</a></li>
-                                </ul>
+            <div>
+                <div class="text-white bg-primary py-5">
+                    <div>
+                        <div class="container">
+                            <div class="row gx-5 justify-content-between">
+                                <div class="col">
+                                    <h3>Brand Name</h3>
+                                    <p class="lead mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nibh magna, commodo eget dictum eu, pretium et nisl. Sed ut sapien ex. Duis at urna a eros dapibus luctus. Phasellus urna lectus, aliquet vitae facilisis eget, lacinia vel lacus. Mauris aliquam aliquet lacus eget hendrerit. Fusce lorem mi, pharetra rutrum faucibus nec, sagittis id lorem. In semper id lorem nec laoreet.<br></p>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="row">
+                                        <div class="col-auto">
+                                            <h5>Odbiorcy</h5>
+                                            <ul class="list-unstyled mb-0">
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col">
+                                            <h5>Sprzedawcy</h5>
+                                            <ul class="list-unstyled mb-0">
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                                <li><a class="link-white" href="page.html">Link 1</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-auto">
+                                            <h5>Serwis internetowy</h5>
+                                            <ul class="list-unstyled mb-0">
+                                                <li><a class="link-white" href="page.html">Regulamin</a></li>
+                                                <li><a class="link-white" href="page.html">Informacje prawne</a></li>
+                                                <li><a class="link-white" href="page.html">Kontakt</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-auto">
-                                <ul class="list-inline fs-3 mb-0 mx--n2">
-                                    <li class="list-inline-item mx-2"><a href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin">
-                                                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
-                                            </svg></a></li>
-                                    <li class="list-inline-item mx-2"><a href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
-                                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
-                                            </svg></a></li>
-                                </ul>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <div class="container">
+                            <div class="row justify-content-between align-items-center">
+                                <div class="col-auto">
+                                    <ul class="list-inline mb-0 mx-n2">
+                                        <li class="list-inline-item mx-2"><a class="link-white" href="page.html">Kontakt</a></li>
+                                        <li class="list-inline-item mx-2"><a class="link-white" href="page.html">Regulamin</a></li>
+                                        <li class="list-inline-item mx-2"><a class="link-white" href="page.html">Polityka prywatności</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-auto">
+                                    <ul class="list-inline fs-3 mb-0 mx--n2">
+                                        <li class="list-inline-item mx-2"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin">
+                                                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
+                                                </svg></a></li>
+                                        <li class="list-inline-item mx-2"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
+                                                    <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
+                                                </svg></a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="bg-light py-4">
+                <div class="py-4">
                     <div class="container">
                         <div class="row justify-content-between align-items-center">
                             <div class="col-auto">
-                                <p class="text-center mb-0">Copyright © Ministerstwo Klimatu i Środowiska</p>
+                                <p class="text-center mb-0">Copyright © Brand Name</p>
+                            </div>
+                            <div class="col-auto">
+                                <ul class="list-inline mb-0 mx-n2">
+                                    <li class="list-inline-item mx-2"><a href="page.html">Polityka prywatności</a></li>
+                                    <li class="list-inline-item mx-2"><a href="page.html">Polityka cookies</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
